# FaceKit

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Info.plist  Nodes.xml  README.md  Tokens.xml  aabb_8hpp.html  aabb_8hpp_source.html  allocator_8hpp.html  allocator_8hpp_source.html  allocator__factory_8hpp.html  allocator__factory_8hpp_source.html  annotated.html  augmentation__cell_8hpp_source.html  augmentation__engine_8hpp.html  augmentation__engine_8hpp_source.html  bitmap__image_8hpp.html  bitmap__image_8hpp_source.html  camera_8hpp.html  camera_8hpp_source.html  chromosome_8hpp.html  chromosome_8hpp_source.html  class_face_kit_1_1_a_a_b_b-members.html  class_face_kit_1_1_a_a_b_b.html  class_face_kit_1_1_allocator-members.html  class_face_kit_1_1_allocator.html  class_face_kit_1_1_allocator_factory-members.html  class_face_kit_1_1_allocator_factory.html  class_face_kit_1_1_allocator_proxy-members.html  class_face_kit_1_1_allocator_proxy.html  class_face_kit_1_1_allocator_statistic-members.html  class_face_kit_1_1_allocator_statistic.html  class_face_kit_1_1_augmentation_cell-members.html  class_face_kit_1_1_augmentation_cell.html  class_face_kit_1_1_augmentation_engine-members.html  class_face_kit_1_1_augmentation_engine.html  class_face_kit_1_1_b_m_p_image-members.html  class_face_kit_1_1_b_m_p_image.html  (+395 more)
cmake/: FaceKitConfig.cmake.in  FaceKitConfigVersion.cmake.in  FindOpenblas.cmake  FindProtobuf.cmake  facekit_config.cmake  facekit_config.hpp.in  facekit_options.cmake  facekit_targets.cmake  facekit_utils.cmake  uninstall_target.cmake.in
modules/core/: CMakeLists.txt  core.doxy
modules/core/example/: ex_thread_pool.cpp  thread_pool_ex.cpp
modules/core/include/facekit/core/: array_dims.hpp  cmd_parser.hpp  error.hpp  library_export.hpp  logger.hpp  nd_array.hpp  nd_array.inl.hpp  nd_array_dims.hpp  nd_array_map.hpp  refcounter.hpp  status.hpp  string_util.hpp  tee_stream.hpp  thread_pool.hpp  type_traits.hpp  types.hpp
modules/core/include/facekit/core/math/: linear_algebra.hpp  matrix.hpp  quaternion.hpp  type_comparator.hpp  vector.hpp
modules/core/include/facekit/core/mem/: allocator.hpp  allocator_factory.hpp  map_allocator.hpp  memory.hpp
modules/core/include/facekit/core/sys/: file_system.hpp  file_system_factory.hpp  posix_file_system.hpp  stacktrace.hpp  stacktrace_resolver.hpp  stacktrace_resolver_dladdr.hpp  stacktrace_resolver_windows.hpp  windows_file_system.hpp
modules/core/include/facekit/core/utils/: enum_bitmask_operator.hpp  proto.hpp  scanner.hpp  string.hpp
modules/core/src/: allocator.cpp  allocator_factory.cpp  array_dims.cpp  cmd_parser.cpp  error.cpp  file_system.cpp  file_system_factory.cpp  linear_algebra.cpp  logger.cpp  map_allocator.cpp  memory.cpp  nd_array.cpp  nd_array_dims.cpp  posix_file_system.cpp  proto.cpp  scanner.cpp  stacktrace.cpp  stacktrace_resolver.cpp  stacktrace_resolver_dladdr.cpp  stacktrace_resolver_windows.cpp  status.cpp  string.cpp  string_util.cpp  tee_stream.cpp  types.cpp  windows_file_system.cpp
modules/core/src/proto/: array_dims.proto  nd_array.proto  nd_array_dims.proto  types.proto
modules/core/test/: test_cmd_parser.cpp  ut_allocator.cpp  ut_array_dims.cpp  ut_file_system.cpp  ut_linear_algebra.cpp  ut_logger.cpp  ut_nd_array.cpp  ut_nd_array_dims.cpp  ut_nd_array_map.cpp  ut_path.cpp  ut_refcounter.cpp  ut_scanner.cpp  ut_stacktrace.cpp  ut_status.cpp  ut_strings.cpp  ut_types.cpp
modules/dataset/: CMakeLists.txt  dataset.doxy
modules/dataset/example/: ex_augmentation_engine.cpp
modules/dataset/include/facekit/dataset/: augmentation_cell.hpp  augmentation_engine.hpp  color_space_cell.hpp  crop_cell.hpp  flip_cell.hpp  identity_cell.hpp  in_plane_rotation_cell.hpp
modules/dataset/src/: augmentation_engine.cpp  color_space_cell.cpp  crop_cell.cpp  flip_cell.cpp  identity_cell.cpp  in_plane_rotation_cell.cpp
modules/doc/: CMakeLists.txt  facekit_doxyfile.in  mainpage.md
modules/geometry/: CMakeLists.txt  geometry.doxy
modules/geometry/include/facekit/geometry/: aabb.hpp  mesh.hpp
modules/geometry/src/: mesh.cpp
modules/io/: CMakeLists.txt  io.doxy
modules/io/example/: ex_image_loader.cpp
modules/io/include/facekit/io/: bitmap_image.hpp  file_io.hpp  image.hpp  image_factory.hpp  jpeg_image.hpp  object_header.hpp  object_manager.hpp  object_proxy.hpp  png_image.hpp  serializable.hpp  tga_image.hpp
modules/io/src/: bitmap_image.cpp  file_io.cpp  image.cpp  image_factory.cpp  jpeg_image.cpp  object_header.cpp  object_manager.cpp  object_proxy.cpp  png_image.cpp  serializable.cpp  tga_image.cpp
modules/model/: CMakeLists.txt  model.doxy
modules/model/include/facekit/model/: camera.hpp  orthographic_projection.hpp  pca_model.hpp  pca_model_factory.hpp  perspective_projection.hpp  weak_projection.hpp
modules/model/src/: camera.cpp  orthographic_projection.cpp  pca_model.cpp  pca_model_factory.cpp  perspective_projection.cpp  weak_projection.cpp
modules/optimisation/: CMakeLists.txt  optimisation.doxy
modules/optimisation/example/: ex_genetic_solver.cpp
modules/optimisation/include/facekit/optimisation/: chromosome.hpp  genetic_solver.hpp  population.hpp
modules/optimisation/src/: genetic_solver.cpp  population.cpp
modules/sim/: CMakeLists.txt
modules/sim/include/facekit/sim/: box_generator.hpp  euler_updater.hpp  generator.hpp  particles.hpp  time_generator.hpp  time_updater.hpp  updater.hpp  velocity_generator.hpp
modules/sim/src/: box_generator.cpp  euler_updater.cpp  generator.cpp  particles.cpp  time_generator.cpp  time_updater.cpp  velocity_generator.cpp
search/: search.css  search.idx
travis/: build-doc.sh  build-library.sh  deploy-doc.sh  install-doxygen.sh  install-openblas.sh  install-opencv.sh  install-protobuf.sh  test-library.sh
